--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-dotenv==1.0.0
 streamlit==1.29.0
-pandas==2.2.3
-numpy>=1.26,<3
-scikit-learn==1.2.2
-plotly==5.15.0
+pandas>=1.5.0
+numpy>=1.23.0
+plotly>=5.18.0
+scikit-learn>=1.3.0
+python-dotenv>=1.0.0
